# File_Creator

./: .flake8  .gitignore  README.md  pyproject.toml
src/: create_file.py
tests/: run.sh  test_main.py
tests/test_data/: csv_to_json.csv  csv_to_orc.csv  csv_to_parquet.csv  excel_to_json.xlsx  json_to_excel.json
