[tool.poetry]
name = "file_creator"
version = "0.1.0"
description = ""
authors = ["Yoshinari-Yamanaka"]

[tool.poetry.dependencies]
python = "^3.9"
pyorc = "^0.5.0"
pyarrow = "^6.0.1"
pandas = "^1.3.5"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
